--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -13,6 +13,7 @@ permissions:
 jobs:
   update_data:
     runs-on: ubuntu-latest
+    timeout-minutes: 120  # 2 hours should be plenty for daily updates
     # Add job-specific permissions
     permissions:
       contents: write  # Required for git push
